--- a/spectral-master/_config.yml
+++ b/spectral-master/_config.yml
@@ -2,22 +2,18 @@
 #
 
 # Site settings
-title: Spectral
+title: YooJin's World
 description: |
-  Another fine responsive  
-  site template freebie  
-  crafted by [HTML5 UP](http://html5up.net)
-owner: Your Name # or company name
-first_published: 2016 # if migrating another site, the year of your first publish
-email: your-email@domain.com
+  Here is YooJin's World  
+ 
+owner: YooJin Bae # or company name
+first_published: 2019 # if migrating another site, the year of your first publish
+email: iam@baeyoojin.com
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://edu-tech-scholar.github.io" # the base hostname & protocol for your site
 social:
-  twitter: https://twitter.com/<username>
-  github: https://github.com/<username>
-  linkedin-square: https://linkedin.com/in/<username>
-  facebook-official: https://facebook.com/<username>
-  google-plus-square: https://plus.google.com/u/0/+<username>
+  github: https://github.com/edu-tech-scholar
+  linkedin-square: https://linkedin.com/in/yoojinbae
   #email: /contact/
   #flickr:
   #instagram:
